--- a/templates/table_transaction.html
+++ b/templates/table_transaction.html
@@ -81,7 +81,7 @@
 
     
 <div>
-    <table  class="display" id="tblData
+    <table  class="display" id="myTable">
       <thead>
         <tr style="background-color: #007bff">
           <th>ДАТА</th>
