--- a/templates/table_transaction.html
+++ b/templates/table_transaction.html
@@ -28,7 +28,7 @@
 </div>
 
 <div style="margin-bottom:1em;">
-    <form class="form-inline" method="GET" action="{% url 'table_trans_filter' %}">
+    <form class="form-inline" method="GET" >
     
         <div class="form-group">
           <input name="start_date"  type="text" class="form-control" placeholder="Дата начальная" onfocus="(this.type='date')"/>
