--- a/templates/table_transaction.html
+++ b/templates/table_transaction.html
@@ -33,7 +33,7 @@ var tableToExcel = (function() {
   }
 </style>
 
-<input type="button" onclick="tableToExcel('testTable', 'W3C Example Table')" value="Export to Excel">
+<button class="btn btn-success"><input onclick="tableToExcel('testTable', 'W3C Example Table')" value="Export to Excel"></button>
 <link rel="stylesheet" href="{% static 'table/css/main.css' %}">
 <div class="alert alert-primary" role="alert" style="text-align: center">
   <h3>ТРАНЗАКЦИИ</h3>
