--- a/templates/table_transaction.html
+++ b/templates/table_transaction.html
@@ -235,8 +235,10 @@ var tableToExcel = (function() {
  
 {% endif %}
 
-  
- <button class="btn btn-success" onclick="tableToExcel('testTable', 'W3C Example Table')" ><h4>EXPORT TO EXCEL</h4></button>
+  <div>
+    <button class="btn btn-success" onclick="tableToExcel('testTable', 'W3C Example Table')" ><h4>EXPORT TO EXCEL</h4></button>
+  </div>
+ 
   
 
 {% endblock %}
