--- a/templates/table_transaction.html
+++ b/templates/table_transaction.html
@@ -21,7 +21,9 @@ var tableToExcel = (function() {
   }
 })()
 </script>    
-
+<div>
+  <button class="btn btn-success" onclick="tableToExcel('testTable', 'W3C Example Table')"><h4>EXPORT TO EXCEL</h4></button>
+</div>
 
 <style>
   input[type='text']::placeholder{
@@ -232,7 +234,7 @@ var tableToExcel = (function() {
        </span>
    </div>
 
- <button class="btn btn-success" onclick="tableToExcel('testTable', 'W3C Example Table')"><h4>EXPORT TO EXCEL</h4></button>
+ 
 {% endif %}
 
   
