--- a/templates/table_clients.html
+++ b/templates/table_clients.html
@@ -64,7 +64,7 @@ var tableToExcel = (function() {
 
 
 
-<table id="myTable">
+<table id="testTable">
   <thead>
     <tr style="background-color: #007bff">
       <th>ДАТА</th>
