--- a/templates/table_cashbox.html
+++ b/templates/table_cashbox.html
@@ -64,7 +64,7 @@ var tableToExcel = (function() {
 
 
 <div>
-  <table id="myTable">
+  <table id="testTable">
     <thead>
       <tr style="background-color: #007bff">
         <th>ДАТА ПОСТАНОВКИ</th>
