--- a/templates/table_clients.html
+++ b/templates/table_clients.html
@@ -94,6 +94,15 @@ var tableToExcel = (function() {
 
 </main>
 
+<div>
+  <button 
+  type="button" class="btn btn-primary btn-lg" style="display: table;
+  margin-right: auto;
+  margin-left: auto;
+  text-align: center;
+  width: 250px;
+  height: 50px"> Добавить Клиента </button>
+</div>
 
 <table id="testTable">
   <thead>
